Table users {
  id int [primary key, increment]
  name varchar
  username varchar [unique, not null]
  email text [not null, unique]
  password text [note: 'Min. 5 caracteres', default:'123456']
  role varchar [default: 'user', note: 'admin/parcial/user']
   created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
  xp int
  
  Indexes {
    (email, password) [name: 'login']
    (username) [name: 'idx_username']
    (email) [unique, name: 'unique_email']
  }
}

Table practices {
  id int [primary key, increment]
  title varchar
  description text
  xp_reward int
}

Table progress {
  id int [primary key, increment]
  user_id int [not null]
  practice_id int [not null]
  completed_at datetime
  xp_earned int

  Indexes {
    (user_id) [name: 'idx_progress_user']
    (practice_id) [name: 'idx_progress_practice']
  }
}

Table rewards {
  id int [primary key, increment]
  name varchar
  description text
  xp_required int
}

Table user_rewards {
  id int [primary key, increment]
  user_id int [not null]
  reward_id int [not null]
  unlocked_at datetime

  Indexes {
    (user_id) [name: 'idx_user_rewards_user']
    (reward_id) [name: 'idx_user_rewards_reward']
  }
}

Table quest {
  id int [primary key, increment]
  title varchar
  description text
  xp_bonus int
  status varchar
}

Table user_quests {
  id int [primary key, increment]
  user_id int [not null]
  quest_id int [not null]
  progress int
  completed_at datetime

  Indexes {
    (user_id) [name: 'idx_user_quests_user']
    (quest_id) [name: 'idx_user_quests_quest']
  }
}

Table followers {
  id int [primary key, increment]
  following_user_id int [not null]
  followed_user_id int [not null]

  Indexes {
    (following_user_id) [name: 'idx_following_user']
    (followed_user_id) [name: 'idx_followed_user']
  }
}

Table store {
  id int [primary key, increment]
  item_name varchar
  item_description text
  xp_cost int
}

Table user_purchases {
  id int [primary key, increment]
  user_id int [not null]
  item_id int [not null]
  purchased_at datetime
}

Table achievements {
  id int [primary key, increment]
  title varchar [not null]
  description text
  is_monthly boolean [default: false] // Indica se é conquista mensal
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp
}

Table user_achievements {
  id int [primary key, increment]
  user_id int [not null]
  achievement_id int [not null]
  assigned_at datetime [default: `CURRENT_TIMESTAMP`]
  month int // Para conquistas mensais, controle por mês (ex: 202306 para junho/2023)

  Indexes {
    (user_id) [name: 'idx_user_achievements_user']
    (achievement_id) [name: 'idx_user_achievements_achievement']
    (user_id, achievement_id, month) [unique, name: 'unique_user_achievement_month']
  }
}

// Foreign Keys
Ref: users.id > user_achievements.user_id
Ref: achievements.id > user_achievements.achievement_id

Ref: users.id > progress.user_id
Ref: practices.id > progress.practice_id

Ref: users.id > user_rewards.user_id
Ref: rewards.id > user_rewards.reward_id

Ref: users.id > user_quests.user_id
Ref: quest.id > user_quests.quest_id

Ref: users.id > followers.following_user_id
Ref: users.id > followers.followed_user_id

Ref: users.id > user_purchases.user_id
Ref: store.id > user_purchases.item_id
